prototypes/p4a/tests/multifile/valid/multifile_basic/app.hll
module app

import db.UserRepo

function main() {
    println("app started")
}
