prototypes/p4a/tests/multifile/invalid/multifile_circular/alpha.hll
module alpha

import beta.helperB

export function helperA() -> Int { 42 }
